# solr-indexer

./: .gitignore  Dockerfile  Dockerfile-build  README.md  adc_obs.txt  adc_osisaf.txt  adc_sios.txt  env.sh  environment.yml  indexdata  mark_senda_parents.sh  nbs_fix.py  out.txt  prospector.yml  pyproject.toml  pytest.ini  requirements-thumb.txt  requirements.txt  requirements_working_production.txt  searchindex  setup.cfg  setup.py  test_thumb.py  tox.ini
.github/workflows/: build-test.yml  syntax.yml
etc/: cfg-template.yml  senda-dev.yml  senda-local.yml  senda-prod.yml  senda-staging.yml  testcore.yml
solrindexer/: __init__.py  bulkindexer.py  cli.py  failure_tracker.py  indexdata.py  indexer.py  io.py  mmd.py  search.py  searchindex.py  spatial.py  threads.py  thumbnail.py  tools.py  vocabulary.py  xmlutils.py
solrindexer/multithread/: __init__.py  bulkindexer.py  io.py  threads.py
solrindexer/script/: bulkindexer.py  indexdata.py  searchindex.py
solrindexer/thumb/: __init__.py  thumbnail.py  thumbnail_api.py
solrindexer/tools/: __init__.py  mmd_solr_spatial.py  tools.py
tests/: test_bulkindexer.py  test_cli.py  test_failure_tracker.py  test_indexdata.py  test_indexer.py  test_mmd.py  test_search.py  test_searchindex.py  test_solr_spatial.py  test_spatial.py  test_tools.py  test_vocabulary.py
tests/input-files/: NORCE-NDVI.xml  full_mmdv4.xml  minimal_mmdv4.xml  mmd_empty_first_keyword_vocabulary.xml  mmd_invalid_date.xml  mmd_invalid_missing_dataset_production_status.xml  mmd_invalid_wrong_dataset_status.xml  mmd_minimal_optional_plus_defaults.xml  mmd_missing_geographic_extent.xml  mmd_multilang_keywords_heavy.xml  mmd_multiple_temporal_extents.xml  mmd_personnel_data_access_matrix.xml  mmd_platform_instrument_ancillary_full.xml  mmd_related_auxiliary_dataset.xml  mmd_related_links_and_datasets.xml  mmd_related_parent_dataset.xml  mmd_related_parent_for_full_fixture.xml  mmd_storage_checksums_and_expiry.xml  mmd_use_constraint_identifier_resource.xml  mmd_use_constraint_license_text.xml
tests/input-files/fail/: mmd_invalid_bad_dataset_production_status.xml  mmd_invalid_missing_geographic_extent.xml  mmd_invalid_missing_keywords.xml  mmd_invalid_wrong_dataset_status.xml  mmd_invalid_wrong_temporal_order.xml
