[metadata]
name = solrindexer
version = attr: solrindexer.__version__
author = MET Norway
author_email = csw-services@met.no
description = Tools and wrappers used for indexing MMD in SolR
url = https://github.com/metno/solrindexing
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = GPL-3.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License version 3
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
python_requires = >=3.6
project_urls =
    Source Code = https://github.com/metno/solrindexing

[options]
include_package_data = True
packages = 
    solrindexer
    solrindexer.script
install_requires =
    cartopy
    lxml>=4.5
    netCDF4
    OWSLib
    pysolr
    pyyaml
    requests
    xmltodict
    metvocab @ git+https://github.com/metno/met-vocab-tools@v1.1

[options.entry_points]
console_scripts =
    indexdata = solrindexer.script.indexdata:_main

[bdist_wheel]
universal = 0

[flake8]
ignore = E221,E226,E228,E241
max-line-length = 99
